# directories-rs

./: .gitignore  Cargo.toml  README.md
directories/: Cargo.toml
directories-derive/: Cargo.toml
directories-derive/src/: directory.rs  errors.rs  lib.rs
directories/examples/: showcase.rs
directories/src/: directory.rs  formatters.rs  lib.rs  std.rs
examples/: showcase.rs
src/: errors.rs  lib.rs
